# tree-property-value-analyzer

./: README.md  pyproject.toml
brightbeam_analysis/: analysis_service.py  exceptions.py  main.py  models.py  price_analyzer.py  utils.py
brightbeam_analysis/parsers/: properties_parser.py  trees_parser.py
brightbeam_analysis/tests/: test_analysis_service.py  test_models.py  test_price_analyzer.py  test_properties_parser.py  test_trees_parser.py
